# passkey-authenticator

./: .gitignore  Beaker.toml  Cargo.toml  PROCESS.md  README.md  test-run  test-run.md  upload-authenticator-to-testnet.sh
.cargo/: config.toml
contracts/passkey/: Cargo.toml
contracts/passkey/schema/raw/: query.json
contracts/passkey/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/passkey/src/authenticator/handler/: authenticate.rs
contracts/passkey/src/passkey/: app-check-google-jwks.json  app-check.rs  app_check.rs  attestation.rs  mod.rs  params.rs  seal.rs
crypto/: Cargo.toml
crypto/src/: ecdsa.rs  errors.rs  lib.rs  secp256r1.rs  webauthn.rs  webauthn2.rs  webauthn_error.rs
crypto/testdata/: verify_webauthn_assertion_tests.json
crypto/tests/: rootberg_secp256r1.rs  webauthn2.rs  wycheproof_secp256r1.rs
schema/: passkey-authenticator.json
schema/raw/: query.json
